[gd_scene load_steps=6 format=3 uid="uid://cy5w4xhe2lmon"]

[ext_resource type="Script" path="res://scenes/chars/monsters/monster_src/enemy2.gd" id="1_k3p8d"]
[ext_resource type="Texture2D" uid="uid://07t1gkmqppot" path="res://icon.svg" id="1_r4thp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_flxod"]
radius = 30.0
height = 126.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6d4h"]
size = Vector2(516, 347.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqnt8"]
size = Vector2(20.75, 76)

[node name="Enemy2" type="CharacterBody2D"]
script = ExtResource("1_k3p8d")

[node name="Texture" type="Sprite2D" parent="."]
modulate = Color(1, 0.40461, 0.288123, 1)
scale = Vector2(0.5, 1)
texture = ExtResource("1_r4thp")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_flxod")

[node name="Radar" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radar"]
shape = SubResource("RectangleShape2D_s6d4h")

[node name="Attack" type="Area2D" parent="."]
position = Vector2(42, 0)

[node name="Area" type="CollisionShape2D" parent="Attack"]
shape = SubResource("RectangleShape2D_kqnt8")

[node name="PatrolPointLeft" type="Marker2D" parent="."]
position = Vector2(634, 0)

[node name="PatrolPointRight" type="Marker2D" parent="."]
position = Vector2(-635, 0)

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Radar" to="." method="_on_radar_body_entered"]
[connection signal="body_exited" from="Radar" to="." method="_on_radar_body_exited"]
[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_Timer_timeout"]
